--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-lg-12 col-sm-12 col-md-12 text-center">
-          <h1>Cleartax Seat Booking</h1>
+          <h1>Seat Booking</h1>
           <div class="row text-center form-items">
             <input
               type="text"
